# SanDoCu

./: .gitignore  README.md
backend/: README.md  chotot_crawler.py  debug_20251102_220908.html  debug_20251102_233209.html  facebook_group_crawler.py  facebook_marketplace_crawler.py  login_and_save_state.py  main.py  pyproject.toml  timestamp_parser.py
backend/database/: crud.py  db_setup.py  stats_queries.py
backend/utils/: csv_writer.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/public/data/sources/: chotot.csv  facebook_group.csv  facebook_marketplace.csv
frontend/src/: App.tsx  index.css  main.tsx
tiktok/: README.md
