[project]
name = "sandocu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "dateparser>=1.2.2",
    "playwright>=1.55.0",
    "requests>=2.25.1",
    "selenium>=4.38.0",
    "tenacity>=9.1.2",
    "webdriver-manager>=4.0.2",
]
